--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,30 +1,17 @@
-- title: Pages
+- title: Sider
   links:
-    - name: Home
+    - name: Hjem
       link: /
-    - name: Portfolio
-      link: /portfolio/
+    - name: Services
+      link: /services/
     - name: Blog
       link: /blog/
-    - name: About
-      link: /about/
-    - name: Contact
-      link: /contact/
-- title: Social
+    - name: Om os
+      link: /om-os/
+    - name: Kontakt
+      link: /kontakt/
+- title: Links
   links:
-    - name: Facebook
-      link:
-      social_icon: Facebook
-      new_window: true
-    - name: Twitter
-      link:
-      social_icon: Twitter
-      new_window: true
-    - name: Google+
-      link:
-      social_icon: Google Plus
-      new_window: true
-    - name: LinkedIn
-      link:
-      social_icon: LinkedIn
+    - name: Previsto
+      link: https://previsto.com
       new_window: true
